# serverless-sqlite

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  build-and-run.sh  build.sh  install-deps.sh
.github/workflows/: codeql-analysis.yml  msvc-analysis.yml
docs/: how-sqlite-works.md
src/: vfs.hh
src/query/: main.cpp  utils.cpp  utils.hh  utils.hpp  vfs.cpp  vfs.hpp
src/store/: main.cpp
